# hotel_manager2

core/: Booking.cpp  Booking.h  Client.cpp  Client.h  Date.cpp  Date.h  Hotel.cpp  Hotel.h  PriceManager.cpp  PriceManager.h  Room.cpp  Room.h  main.cpp
data/: clients.txt
hotel_manager2-main/: CMakeLists.txt
hotel_manager2-main/core/: Booking.cpp  Client.cpp  Date.cpp  Hotel.cpp  Hotel.h
hotel_manager2-main/data/: rooms.txt
